--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 /*--------------------------------------------Colors*/
 
 .bg-color-name-title {
-    background-color: #676767;
+    background-color: white;
 }
 
 .bg-color-three-reasons {
@@ -19,7 +19,7 @@
 }
 
 .bg-color-work-history {
-    background-color: #9b59b6;
+    background-color: #cf3c28;
 }
 
 .bg-color-contact {
@@ -35,28 +35,20 @@
 }
 
 .ui-menu-color-home {
-    background-color: #e67e22;
+    background-color: #cf3c28;
 }
 
 .ui-menu-color-resume {
-    background-color: #9b59b6;
-}
-
-.ui-menu-color-contact {
-    background-color: #3498db;
+    background-color: #565757;
 }
 
 .ui-menu-color-download {
-    background-color: #d9a81d;
+    background-color: #565757;
 }
 
 
 .ui-menu-color-github {
-    background-color: #1c4a6c;
-}
-
-.ui-menu-color-interests {
-    background-color: #e74c3c;
+    background-color: #cf3c28;
 }
 
 
@@ -118,7 +110,7 @@ header {
 }
 
 .logo {
-    background: url("../images/rosie.jpeg");
+    background: url("../images/cv-photo-cropped.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -133,7 +125,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #ffffff;
+    color: black;
 }
 
 .title {
@@ -142,7 +134,7 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #ffffff;
+    color: black;
 }
 
 #nav {
@@ -250,7 +242,7 @@ footer .cv-pdf i:hover {
 
 .three-reasons-icon {
     font-size: 26px;
-    color: #e67e22;
+    color: #cf3c28;
 }
 
 .three-reasons-heading {
